--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,16 @@
 page-home {
 
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px
+    }
+    h1{
+        text-align: center;
+    }
+    h6{
+        text-align: center;
+    }
+
 }
